--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             </ul>
         </div>
     </section>
+    <footer>
+        <p>Coded by <a href="https://github.com/mubaral-bunza">M. A. Bunza</a></p>
+    </footer>
 </div>
 <script src="main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
